--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "./node_modules/react-tools/bin/jsx public/javascripts/src/ public/javascripts/build/"
+    "build": "jsx -x jsx public/javascripts/src/ public/javascripts/build/"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
