--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "build": "jsx -x jsx public/javascripts/src/ public/javascripts/build/"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
@@ -16,6 +15,10 @@
     "serve-favicon": "~2.2.1"
   },
   "devDependencies": {
-    "react-tools": "^0.13.3"
+    "browserify": "^10.2.3",
+    "gulp": "^3.8.11",
+    "react": "^0.13.3",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
