--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "~4.12.4",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
+    "passport": "^0.2.2",
+    "passport-steam": "^0.1.5",
     "serve-favicon": "~2.2.1"
   },
   "devDependencies": {
