--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "supervisor ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
+    "express-session": "^1.11.2",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
     "passport": "^0.2.2",
@@ -23,6 +24,7 @@
     "gulp-sass": "^2.0.1",
     "react": "^0.13.3",
     "reactify": "^1.1.1",
+    "supervisor": "^0.6.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
