--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.3.4",
     "bootstrap-material-design": "~0.3.0",
-    "react": "~0.13.3"
+    "react": "~0.13.3",
+    "jquery": "~2.1.4"
   }
 }
