--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "bootstrap-sass-official": "~3.3.4",
     "bootstrap-material-design": "~0.3.0",
     "react": "~0.13.3",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "perfect-scrollbar": "~0.6.2"
   }
 }
