--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "morgan": "~1.5.3",
     "passport": "^0.2.2",
     "passport-steam": "^0.1.5",
-    "serve-favicon": "~2.2.1",
-    "steam-tradeoffers": "^1.2.3"
+    "serve-favicon": "~2.2.1"
   },
   "devDependencies": {
     "browserify": "^10.2.3",
