--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.5.3",
     "passport": "^0.2.2",
     "passport-steam": "^0.1.5",
+    "request": "^2.58.0",
     "serve-favicon": "~2.2.1"
   },
   "devDependencies": {
