--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "supervisor ./bin/www"
+    "start": "node ./bin/www",
+    "supervisor": "supervisor ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
